# HighPerformanceComparison

BenchMark/: README  README.md
BenchMark/examples/: CMakeLists.txt  README  comb.txt  compileAVX.sh  compileSSE.sh  createPlot.sh  plot.gnu  timing.txt
BenchMark/examples/inc/: Vector3DFast.h  Vector3DFast.h.old
BenchMark/examples/resultsPlots/: .~lock.Plots.doc#
BenchMark/examples/tests/: daxpy.cpp  denseVectorAddition.cpp  heapTestDaxpy.cpp  heapTestMatrixVector.cpp  heapTestMatrixVector.cpp.old  heapTestMatrixVector.cpp~  heapTestVectorAddition.cpp  matrixVector.cpp
examples/: CMakeLists.txt  CMakeLists.txt~  compile.sh  compileS.sh  createPlot.sh  ex1  ex1.cpp  ex1.cpp~  gnuplotCommands.txt  plot.gnu
examples/cmake/modules/: FindBLAS.cmake  FindBOOST.cmake  FindOpenCL.cmake
examples/inc/: Vector3DFast.h  Vector3DFast.h~
examples/tests/: daxpy.cpp  denseVectorAddition.cpp  ex1.cpp  ex1.cpp~  ex2.cpp  ex3Simple.cpp  ex3SimpleSandro.cpp  heapTest.cpp  heapTestMatrixVector.cpp  matrixSimple.cpp  matrixVector.cpp  matrixVectorDemo.cpp  n3DVectBlaze.cpp
